test/libsolidity/syntaxTests/inheritance/unimplemented_without_virtual.sol
abstract contract C {
	function f() external;
}
// ----
// TypeError 5424: (23-45): Functions without implementation must be marked virtual.
